wall overflow and css fix

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -37,7 +37,7 @@ body {
 
 .content {
   margin-top: 40px;
-  width: 100%;
+  width: 80%;
   padding-top: 20px;
   padding-left: 10%;
 }
@@ -49,7 +49,7 @@ body {
 }
 
 .messages textarea {
-  width: 80%;
+  width: 100%;
   display: block;
 }
 
@@ -118,7 +118,7 @@ button {
 }
 
 .separator {
-  width: 80%;
+  width: 100%;
   height: 2px;
   border-bottom: 2px solid #ddd;
   margin-top: 10px;
@@ -128,4 +128,10 @@ button {
 .foto-small {
     width: 30px;
     height: 30px;
+}
+
+.wall {
+    overflow: auto;
+    height: 600px;
+    max-height: 600px;
 }
